--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p><b>Bachelor's degree in Information Technology (BS IT)</b></p>
     <h2>Institute</h2>
     <p><a href="https://www.w3schools.com/">SPRC</a></p>
-     <img style="position: relative; left: 900px; top: -350px;" src="<img style="position: relative; left: 900px; top: -350px;" src="https://raw.githubusercontent.com/zainulabideen789/intro-page/main/zain1.jpg" alt="Zain" width="300" height="300">" alt="Zain" width="300" height="300">
+     <img style="position: relative; left: 900px; top: -350px;" src="<img style="position: relative; left: 900px; top: -350px;" src="<img src="https://raw.githubusercontent.com/zainulabideen789/intro-page/main/zain1.jpg" alt="Zain" width="300" height="300" style="...">" alt="Zain" width="300" height="300">" alt="Zain" width="300" height="300">
     <h2 style="text-align: center; position: relative; top: -350px;"><i><u>Introduction</u></i></h2>
     <p style="position: relative; top: -350px;"><b>Hello, my name is Muhammad Zain ul Abideen.
          I am currently pursuing a Bachelor's degree in Information Technology (BS IT). 
